# awesome-hacktoberfest-reloaded

LVL00_N1gh7/: Cargo.toml  main.rs  steganography_dmitry-mingazov.py
LVL1_N00b/: Duplicati_Filippo-Lampa.java  README.md
LVL1_N00b/Hello_World/: HelloWorld_Filippo-Lampa.b  HelloWorld_MarcoCocilova.java  Hello_World_TanaisTheMighty.c.txt  Hello_World_TanaisTheMighty.cpp  Hello_world.py  Hello_world_HolyC.hc  hello-world  hello-world-CommonLisp_097475  hello_world_cleoPinoli.java  hello_world_michele_benedetti  hello_world_miris-mp.go  hello_xPieroxk.rs  hw.py
LVL1_N00b/Radice_Quadrata/: Radice.java  Radice_Quadrata_Filippo-Lampa.rb  Radice_quadrata_miris-mp.go  Square_GianlucaLanchini.rs  radice_097475.lisp  radice_quadrata_benedetti_michele.dart
LVL1_N00b/Trova_il_Duplicato/: Duplicate.java  Duplicate_GianlucaLanchini.rs  Trova_il_Duplicato_miris-mp.go  duplicates_097475.lisp  find_duplicate_sldgr99.rb  trovaDuplicato_xPieroxk.rs  trova_duplicato_michele_benedetti.dart  trova_il_duplicato.java  trova_il_duplicato_Marcosere11.go  trova_il_duplicato_costin_dragoi.clj
LVL1_N00b/Trova_prima_e_ultima_occorrenza/: First_Last_Occurrance_GianlucaLanchini.rs  Occorrenze_Filippo-Lampa.java  Occurrency.java  find_first_last_michele_benedetti.dart  occorrenze_097475.lisp  prima_e_ultima.java  trova_prima_e_ultima_occorrenza_Marcosere11.go  trova_prima_e_ultima_occorrenza_costin_dragoi.clj  trova_prima_e_ultima_occorrenza_miris-mp.go
LVL2_T353i/: README.md
LVL2_T353i/Crea_un_Gioco/: SCF-BASH.sh  (+4 more)
LVL3_Game_Room/: README.md
LVL4_1337_F1n4l_B055/: README.md
(+82 files in other folders)
