[package]
name = "hacktoberbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.4"
# serde = { version = "1.0", features = ["derive"] }
